--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "com.github.permissions-dispatcher:permissionsdispatcher:4.8.0"
-    annotationProcessor "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.8.0"
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 
 }
